[workspace]

[package]
name = "aho-corasick-c"
version = "0.1.0"
description = "C wrapper for aho-corasick for loading from Wasm"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "aho_corasick"

[dependencies]
aho-corasick = { git = "https://github.com/BurntSushi/aho-corasick", rev = "e74ed25054d65aae4bd6d648e163c5635e0ce6ab" }
